--- a/css/situation.css
+++ b/css/situation.css
@@ -7,12 +7,12 @@ body{font-size: 14px}
 .flex-align-center{-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center;}
 .flex-pack-center{-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;}
 .flex-pack-justify{-webkit-box-pack:justify;-webkit-justify-content:space-between;-ms-flex-pack:justify;justify-content:space-between;}
-.situation{background: transparent;background:url("../img/background.png");background-size:100% 100%;width: 100%;height:100%;font-size: 0.22rem;overflow-x: hidden;overflow-y: scroll}
+.situation{background: transparent;background:url("../img/background.png");background-size:100% 100%;width: 100%;height:calc(100% + 60px);font-size: 0.22rem;overflow-x: hidden;overflow-y: scroll}
 .situation .title{color:#D9651A}
 .situation .content{color:#3F1C05;margin-top: .21rem;line-height: .36rem;text-indent: .42rem}
 .situation .win{color:#CF2D2A;}
 .situation .loose{color:#1C6715}
-.situation .box:first-child{margin-top: 0}
+.situation .box:nth-child(2){margin-top: 0}
 .situation .box{background: #FAF2DF;border-radius: .2rem;width:100%;padding:.1rem .1rem;margin-top: .21rem;overflow: hidden; box-shadow: 0 0 0 rgba(51, 51, 51, 0.76),0 1px 0 0 #BBA28D,0 2px 0 0 #BBA28D,0 3px 0 0 #BBA28D,0 4px 0 0 #BBA28D,0 5px 0 0 #BBA28D;position: relative}
 .situation .box .box-center{width:3.2rem;margin: 0 auto}
 .situation .box .top{padding:0 .1rem}
